challenge in process

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="styleram.css" />
+    <link rel="stylesheet" type="text/css" href="stylekrsna.css" />
   </head>
   <body>
+      <h1>HACK YOUR FUTURE</h1>
       
-   <main class="rainbow" onload="myFunction()" >
+  <!--  <main class="rainbow"   >
     <div id="violet" class="color"></div>
-    <div id="indigo" class="color"></div>
+     <div id="indigo" class="color"></div>
     <div id="blue" class="color"></div>
     <div id="green" class="color"></div>
     <div id="yellow" class="color"></div>
     <div id="orange"class="color"></div>
     <div id="red" class="color"></div>
-   </main>
+   </main> -->
+  
 
-   <script type="text/javascript" src="test.js"></script>
+   <script type="text/javascript" src="challenge.js"></script>
   </body>
 </html>
