challenge in process

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
       <h1>HACK YOUR FUTURE</h1>
+      <div class="container"></div>
       
   <!--  <main class="rainbow"   >
     <div id="violet" class="color"></div>
