--- a/rainbows/index.html
+++ b/rainbows/index.html
@@ -4,7 +4,22 @@
         <link rel="stylesheet" type="text/css" href="stylerainbow.css" />
     </head>
     <body>
-       
+       <div>
+           <p id="HYF">
+               Hack your future
+           </p>
+           <p id="holi">
+               Wishes you a Happy Holi
+           </p>
+           <p id="and">
+               AND 
+           </p>
+           <p id="nowruz">
+              Happy Nowruz
+           </p>
+       </div>
+       <span>Hack your</span>
+       <span>future</span>
        
         <script type="text/javascript" src="rainbow.js"></script>
     </body>
