--- a/rainbows/index.html
+++ b/rainbows/index.html
@@ -9,11 +9,9 @@
         Hack your future 
       </p>
       <p id="holi">
-        Wishes you a Happy Holi
+        Wish you a
       </p>
-      <p id="and">
-        AND
-      </p>
+      
     </div>
    
 
