--- a/newToday/index.html
+++ b/newToday/index.html
@@ -1,12 +1,21 @@
 <html>
-    <head>
-        <title>
-            Surprise
-        </title>
-        <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400i" rel="stylesheet">
-        <link type="text/css" rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="heart"></div>
-    </body>
+
+<head>
+    <title>
+        Surprise
+    </title>
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400i" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    
+    <div class="heart"></div>
+    <!--  <p>Happy 1st Anneversary</p> -->
+    <p></p>
+    <canvas id="confetti"></canvas>
+    <script src="node_modules/confetti-js/dist/index.min.js"></script>
+    <script type="text/javascript" src="newsToday.js"></script>
+</body>
+
 </html>
