audio not working

--- a/newToday/index.html
+++ b/newToday/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    
+   <!--  <audio controls autoplay id="music">
+        <source src="New-Beginning.mp3" type="audio/wav">
+        Your browser does not support the audio element.
+      </audio> -->
     <div class="heart"></div>
     <!--  <p>Happy 1st Anneversary</p> -->
     <p></p>
